src/snapshots/alma__parser__tests__expression_parser-45.snap
---
source: src/parser.rs
expression: "parse(\"let\\n  x = a\\n    x\\nin\\nx\")"

---
Input:

let
  x = a
    x
in
x

Result:

Node {
    start: 0,
    end: 22,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Let(
            [
                Pattern(
                    Node {
                        start: 6,
                        end: 7,
                        line: 2,
                        column: 2,
                        value: Identifier(
                            Node {
                                start: 6,
                                end: 7,
                                line: 2,
                                column: 2,
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 1,
                                    },
                                    case: Camel,
                                },
                            },
                        ),
                    },
                    Node {
                        start: 10,
                        end: 17,
                        line: 2,
                        column: 6,
                        value: Expression_ {
                            typ: RefCell {
                                value: None,
                            },
                            expr: FnCall(
                                Node {
                                    start: 10,
                                    end: 11,
                                    line: 2,
                                    column: 6,
                                    value: Expression_ {
                                        typ: RefCell {
                                            value: None,
                                        },
                                        expr: Identifier(
                                            Node {
                                                start: 10,
                                                end: 11,
                                                line: 2,
                                                column: 6,
                                                value: Identifier_ {
                                                    name: SymbolU32 {
                                                        value: 2,
                                                    },
                                                    case: Camel,
                                                },
                                            },
                                        ),
                                    },
                                },
                                [
                                    Node {
                                        start: 16,
                                        end: 17,
                                        line: 3,
                                        column: 4,
                                        value: Expression_ {
                                            typ: RefCell {
                                                value: None,
                                            },
                                            expr: Identifier(
                                                Node {
                                                    start: 16,
                                                    end: 17,
                                                    line: 3,
                                                    column: 4,
                                                    value: Identifier_ {
                                                        name: SymbolU32 {
                                                            value: 1,
                                                        },
                                                        case: Camel,
                                                    },
                                                },
                                            ),
                                        },
                                    },
                                ],
                            ),
                        },
                    },
                ),
            ],
            Node {
                start: 21,
                end: 22,
                line: 5,
                column: 0,
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: Identifier(
                        Node {
                            start: 21,
                            end: 22,
                            line: 5,
                            column: 0,
                            value: Identifier_ {
                                name: SymbolU32 {
                                    value: 1,
                                },
                                case: Camel,
                            },
                        },
                    ),
                },
            },
        ),
    },
}
