src/snapshots/alma__parser__tests__expression_parser-46.snap
---
source: src/parser.rs
expression: "parse(\"let\\n  x = a\\n    x\\n b = 5\\nin\\nx\")"

---
Input:

let
  x = a
    x
 b = 5
in
x

Result:

Node {
    start: 0,
    end: 29,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Let(
            [
                Pattern(
                    Node {
                        start: 6,
                        end: 7,
                        line: 2,
                        column: 2,
                        value: Identifier(
                            Node {
                                start: 6,
                                end: 7,
                                line: 2,
                                column: 2,
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 1,
                                    },
                                },
                            },
                        ),
                    },
                    Node {
                        start: 10,
                        end: 17,
                        line: 2,
                        column: 6,
                        value: Expression_ {
                            typ: RefCell {
                                value: None,
                            },
                            expr: FnCall(
                                Node {
                                    start: 10,
                                    end: 11,
                                    line: 2,
                                    column: 6,
                                    value: Expression_ {
                                        typ: RefCell {
                                            value: None,
                                        },
                                        expr: Identifier(
                                            Node {
                                                start: 10,
                                                end: 11,
                                                line: 2,
                                                column: 6,
                                                value: Identifier_ {
                                                    name: SymbolU32 {
                                                        value: 2,
                                                    },
                                                },
                                            },
                                        ),
                                    },
                                },
                                [
                                    Node {
                                        start: 16,
                                        end: 17,
                                        line: 3,
                                        column: 4,
                                        value: Expression_ {
                                            typ: RefCell {
                                                value: None,
                                            },
                                            expr: Identifier(
                                                Node {
                                                    start: 16,
                                                    end: 17,
                                                    line: 3,
                                                    column: 4,
                                                    value: Identifier_ {
                                                        name: SymbolU32 {
                                                            value: 1,
                                                        },
                                                    },
                                                },
                                            ),
                                        },
                                    },
                                ],
                            ),
                        },
                    },
                ),
                Pattern(
                    Node {
                        start: 19,
                        end: 20,
                        line: 4,
                        column: 1,
                        value: Identifier(
                            Node {
                                start: 19,
                                end: 20,
                                line: 4,
                                column: 1,
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 3,
                                    },
                                },
                            },
                        ),
                    },
                    Node {
                        start: 23,
                        end: 24,
                        line: 4,
                        column: 5,
                        value: Expression_ {
                            typ: RefCell {
                                value: None,
                            },
                            expr: Float(
                                5.0,
                            ),
                        },
                    },
                ),
            ],
            Node {
                start: 28,
                end: 29,
                line: 6,
                column: 0,
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: Identifier(
                        Node {
                            start: 28,
                            end: 29,
                            line: 6,
                            column: 0,
                            value: Identifier_ {
                                name: SymbolU32 {
                                    value: 1,
                                },
                            },
                        },
                    ),
                },
            },
        ),
    },
}
