src/snapshots/alma__parser__tests__expression_parser-47.snap
---
source: src/parser.rs
expression: "parse(\"\\\nlet\n  IAmNotCamelCase = 1\nin\nIAmNotCamelCase\n\")"

---
Input:

let
  IAmNotCamelCase = 1
in
IAmNotCamelCase


Result:

2:2: Expected a pattern for the left side of the let expression, but instead found: `IAmNotCamelCase`

  1│  let
  2│    IAmNotCamelCase = 1
   │    ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑
  3│  in
  4│  IAmNotCamelCase

Error {
    message: "2:2: Expected a pattern for the left side of the let expression, but instead found: `IAmNotCamelCase`\n\n  1│  let\n  2│    IAmNotCamelCase = 1\n   │    ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑\n  3│  in\n  4│  IAmNotCamelCase",
    token: Token {
        kind: CapitalizedIdentifier,
        position: 6,
        end_position: 21,
        lexeme: "IAmNotCamelCase",
        line: 2,
        column: 2,
        indent: 2,
    },
}
