src/snapshots/alma__parser__tests__expression_parser-48.snap
---
source: src/parser.rs
expression: "parse(\"let _ = a x in x\")"

---
Input:

let _ = a x in x

Result:

Node {
    start: 0,
    end: 16,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Let(
            [
                Pattern(
                    Node {
                        start: 4,
                        end: 5,
                        line: 1,
                        column: 4,
                        value: Hole,
                    },
                    Node {
                        start: 8,
                        end: 11,
                        line: 1,
                        column: 8,
                        value: Expression_ {
                            typ: RefCell {
                                value: None,
                            },
                            expr: FnCall(
                                Node {
                                    start: 8,
                                    end: 9,
                                    line: 1,
                                    column: 8,
                                    value: Expression_ {
                                        typ: RefCell {
                                            value: None,
                                        },
                                        expr: Identifier(
                                            Node {
                                                start: 8,
                                                end: 9,
                                                line: 1,
                                                column: 8,
                                                value: Identifier_ {
                                                    name: "a",
                                                    case: Camel,
                                                },
                                            },
                                        ),
                                    },
                                },
                                [
                                    Node {
                                        start: 10,
                                        end: 11,
                                        line: 1,
                                        column: 10,
                                        value: Expression_ {
                                            typ: RefCell {
                                                value: None,
                                            },
                                            expr: Identifier(
                                                Node {
                                                    start: 10,
                                                    end: 11,
                                                    line: 1,
                                                    column: 10,
                                                    value: Identifier_ {
                                                        name: "x",
                                                        case: Camel,
                                                    },
                                                },
                                            ),
                                        },
                                    },
                                ],
                            ),
                        },
                    },
                ),
            ],
            Node {
                start: 15,
                end: 16,
                line: 1,
                column: 15,
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: Identifier(
                        Node {
                            start: 15,
                            end: 16,
                            line: 1,
                            column: 15,
                            value: Identifier_ {
                                name: "x",
                                case: Camel,
                            },
                        },
                    ),
                },
            },
        ),
    },
}
