src/snapshots/alma__parser__tests__expression_parser-49.snap
---
source: src/parser.rs
expression: "parse(\"\\\nlet\n  incr n = n + 1\nin\nincr 5\n\")"

---
Input:

let
  incr n = n + 1
in
incr 5


Result:

Node {
    start: 0,
    end: 30,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Let(
            [
                Lambda(
                    Node {
                        start: 6,
                        end: 10,
                        line: 2,
                        column: 2,
                        value: Identifier_ {
                            name: "incr",
                            case: Camel,
                        },
                    },
                    Node {
                        start: 6,
                        end: 20,
                        line: 2,
                        column: 2,
                        value: Expression_ {
                            typ: RefCell {
                                value: None,
                            },
                            expr: Lambda(
                                [
                                    Node {
                                        start: 11,
                                        end: 12,
                                        line: 2,
                                        column: 7,
                                        value: Identifier(
                                            Node {
                                                start: 11,
                                                end: 12,
                                                line: 2,
                                                column: 7,
                                                value: Identifier_ {
                                                    name: "n",
                                                    case: Camel,
                                                },
                                            },
                                        ),
                                    },
                                ],
                                Node {
                                    start: 15,
                                    end: 20,
                                    line: 2,
                                    column: 11,
                                    value: Expression_ {
                                        typ: RefCell {
                                            value: None,
                                        },
                                        expr: Binary(
                                            Node {
                                                start: 17,
                                                end: 18,
                                                line: 2,
                                                column: 13,
                                                value: Expression_ {
                                                    typ: RefCell {
                                                        value: None,
                                                    },
                                                    expr: Identifier(
                                                        Node {
                                                            start: 17,
                                                            end: 18,
                                                            line: 2,
                                                            column: 13,
                                                            value: Identifier_ {
                                                                name: "__op__add",
                                                                case: Camel,
                                                            },
                                                        },
                                                    ),
                                                },
                                            },
                                            Node {
                                                start: 17,
                                                end: 18,
                                                line: 2,
                                                column: 13,
                                                value: Binop_ {
                                                    typ: Addition,
                                                    precedence: 14,
                                                    associativity: Ltr,
                                                    fn_: Identifier_ {
                                                        name: "__op__add",
                                                        case: Camel,
                                                    },
                                                },
                                            },
                                            [
                                                Node {
                                                    start: 15,
                                                    end: 16,
                                                    line: 2,
                                                    column: 11,
                                                    value: Expression_ {
                                                        typ: RefCell {
                                                            value: None,
                                                        },
                                                        expr: Identifier(
                                                            Node {
                                                                start: 15,
                                                                end: 16,
                                                                line: 2,
                                                                column: 11,
                                                                value: Identifier_ {
                                                                    name: "n",
                                                                    case: Camel,
                                                                },
                                                            },
                                                        ),
                                                    },
                                                },
                                                Node {
                                                    start: 19,
                                                    end: 20,
                                                    line: 2,
                                                    column: 15,
                                                    value: Expression_ {
                                                        typ: RefCell {
                                                            value: None,
                                                        },
                                                        expr: Float(
                                                            1.0,
                                                        ),
                                                    },
                                                },
                                            ],
                                        ),
                                    },
                                },
                            ),
                        },
                    },
                ),
            ],
            Node {
                start: 24,
                end: 30,
                line: 4,
                column: 0,
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: FnCall(
                        Node {
                            start: 24,
                            end: 28,
                            line: 4,
                            column: 0,
                            value: Expression_ {
                                typ: RefCell {
                                    value: None,
                                },
                                expr: Identifier(
                                    Node {
                                        start: 24,
                                        end: 28,
                                        line: 4,
                                        column: 0,
                                        value: Identifier_ {
                                            name: "incr",
                                            case: Camel,
                                        },
                                    },
                                ),
                            },
                        },
                        [
                            Node {
                                start: 29,
                                end: 30,
                                line: 4,
                                column: 5,
                                value: Expression_ {
                                    typ: RefCell {
                                        value: None,
                                    },
                                    expr: Float(
                                        5.0,
                                    ),
                                },
                            },
                        ],
                    ),
                },
            },
        ),
    },
}
