src/snapshots/alma__parser__tests__expression_parser-5.snap
---
source: src/parser.rs
expression: "parse(\"123.2\")"

---
Input:

123.2

Result:

Node {
    start: 0,
    end: 5,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Float(
            123.2,
        ),
    },
}
