src/snapshots/alma__parser__tests__expression_parser-50.snap
---
source: src/parser.rs
expression: "parse(\"\\\nlet add x y = x + y\nadd 5\")"

---
Input:

let add x y = x + y
add 5

Result:

Node {
    start: 0,
    end: 25,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Let(
            [
                Lambda(
                    Node {
                        start: 4,
                        end: 7,
                        line: 1,
                        column: 4,
                        value: Identifier_ {
                            name: "add",
                            case: Camel,
                        },
                    },
                    Node {
                        start: 4,
                        end: 19,
                        line: 1,
                        column: 4,
                        value: Expression_ {
                            typ: RefCell {
                                value: None,
                            },
                            expr: Lambda(
                                [
                                    Node {
                                        start: 8,
                                        end: 9,
                                        line: 1,
                                        column: 8,
                                        value: Identifier(
                                            Node {
                                                start: 8,
                                                end: 9,
                                                line: 1,
                                                column: 8,
                                                value: Identifier_ {
                                                    name: "x",
                                                    case: Camel,
                                                },
                                            },
                                        ),
                                    },
                                    Node {
                                        start: 10,
                                        end: 11,
                                        line: 1,
                                        column: 10,
                                        value: Identifier(
                                            Node {
                                                start: 10,
                                                end: 11,
                                                line: 1,
                                                column: 10,
                                                value: Identifier_ {
                                                    name: "y",
                                                    case: Camel,
                                                },
                                            },
                                        ),
                                    },
                                ],
                                Node {
                                    start: 14,
                                    end: 19,
                                    line: 1,
                                    column: 14,
                                    value: Expression_ {
                                        typ: RefCell {
                                            value: None,
                                        },
                                        expr: Binary(
                                            Node {
                                                start: 16,
                                                end: 17,
                                                line: 1,
                                                column: 16,
                                                value: Expression_ {
                                                    typ: RefCell {
                                                        value: None,
                                                    },
                                                    expr: Identifier(
                                                        Node {
                                                            start: 16,
                                                            end: 17,
                                                            line: 1,
                                                            column: 16,
                                                            value: Identifier_ {
                                                                name: "(+)",
                                                                case: Camel,
                                                            },
                                                        },
                                                    ),
                                                },
                                            },
                                            Node {
                                                start: 16,
                                                end: 17,
                                                line: 1,
                                                column: 16,
                                                value: Binop_ {
                                                    typ: Addition,
                                                    precedence: 14,
                                                    associativity: LTR,
                                                    fn_: Identifier_ {
                                                        name: "(+)",
                                                        case: Camel,
                                                    },
                                                },
                                            },
                                            [
                                                Node {
                                                    start: 14,
                                                    end: 15,
                                                    line: 1,
                                                    column: 14,
                                                    value: Expression_ {
                                                        typ: RefCell {
                                                            value: None,
                                                        },
                                                        expr: Identifier(
                                                            Node {
                                                                start: 14,
                                                                end: 15,
                                                                line: 1,
                                                                column: 14,
                                                                value: Identifier_ {
                                                                    name: "x",
                                                                    case: Camel,
                                                                },
                                                            },
                                                        ),
                                                    },
                                                },
                                                Node {
                                                    start: 18,
                                                    end: 19,
                                                    line: 1,
                                                    column: 18,
                                                    value: Expression_ {
                                                        typ: RefCell {
                                                            value: None,
                                                        },
                                                        expr: Identifier(
                                                            Node {
                                                                start: 18,
                                                                end: 19,
                                                                line: 1,
                                                                column: 18,
                                                                value: Identifier_ {
                                                                    name: "y",
                                                                    case: Camel,
                                                                },
                                                            },
                                                        ),
                                                    },
                                                },
                                            ],
                                        ),
                                    },
                                },
                            ),
                        },
                    },
                ),
            ],
            Node {
                start: 20,
                end: 25,
                line: 2,
                column: 0,
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: FnCall(
                        Node {
                            start: 20,
                            end: 23,
                            line: 2,
                            column: 0,
                            value: Expression_ {
                                typ: RefCell {
                                    value: None,
                                },
                                expr: Identifier(
                                    Node {
                                        start: 20,
                                        end: 23,
                                        line: 2,
                                        column: 0,
                                        value: Identifier_ {
                                            name: "add",
                                            case: Camel,
                                        },
                                    },
                                ),
                            },
                        },
                        [
                            Node {
                                start: 24,
                                end: 25,
                                line: 2,
                                column: 4,
                                value: Expression_ {
                                    typ: RefCell {
                                        value: None,
                                    },
                                    expr: Float(
                                        5.0,
                                    ),
                                },
                            },
                        ],
                    ),
                },
            },
        ),
    },
}
