src/snapshots/alma__parser__tests__expression_parser-52.snap
---
source: src/parser.rs
expression: "parse(\"let a = { in 5\")"

---
Input:

let a = { in 5

Result:

1:10: Expected a record literal `{ x = 1, y = 2 }`or a record update `{ record | x = 5, y = 4 }`, but instead found: 'in'

  1│  let a = { in 5
   │            ↑↑

Error {
    message: "1:10: Expected a record literal `{ x = 1, y = 2 }`or a record update `{ record | x = 5, y = 4 }`, but instead found: \'in\'\n\n  1│  let a = { in 5\n   │            ↑↑",
    token: Token {
        kind: In,
        position: 10,
        end_position: 12,
        lexeme: "in",
        line: 1,
        column: 10,
        indent: 0,
    },
}
