src/snapshots/alma__parser__tests__expression_parser-53.snap
---
source: src/parser.rs
expression: "parse(\"{ 1 : 5 }\")"

---
Input:

{ 1 : 5 }

Result:

1:2: Expected an identifier for the name of the field in the record, but instead found: '1'

  1│  { 1 : 5 }
   │    ↑

Error {
    message: "1:2: Expected an identifier for the name of the field in the record, but instead found: \'1\'\n\n  1│  { 1 : 5 }\n   │    ↑",
    token: Token {
        kind: Float,
        position: 2,
        end_position: 3,
        lexeme: "1",
        line: 1,
        column: 2,
        indent: 0,
    },
}
